# pragmatic-code-generation

./: README.md  const_matrix.py  pass_matrix.npy  prompt.py  pyproject.toml  reflexion_tests.sh  sft_trainer.py  viz_app.py
app/: server.py
data/: humaneval_canonical_solutions.jsonl  mbpp_sanitize_canonical_solutions.jsonl
finetune/: agent.py  pragmatic_trainer.py  sft_trainer.py
inference/: gen_codeT_canonical.py  gen_codeT_results.py  gen_consistency_matrix.py  gen_mbr_exec_results.py  gen_reflexion_tests.py  gen_rsa_codeT_canonical.py  gen_rsa_codeT_results.py  gen_rsa_codeT_results_autoregressive.py  gen_rsa_testcases.py  icl.py  passk.py  prompt_templates.py
outputs/: num_tests.json  reports.json  solutions.json  tests.json
scripts/: gen_canonical_const_matrix.py  gen_canonical_const_matrix.sh  gen_codeT_canonical.py  gen_codeT_canonical.sh  gen_codeT_canonical1.sh  gen_codeT_canonical2.sh  gen_codeT_canonical3.sh  gen_codeT_canonical4.sh  gen_codeT_canonical5.sh  gen_codeT_results.py  gen_codeT_results.sh  gen_consistency_matrix.py  gen_consistency_matrix.sh  gen_rsa_codeT_canonical.py  gen_rsa_codeT_canonical.sh  gen_rsa_codeT_canonical1.sh  gen_rsa_codeT_canonical2.sh  gen_rsa_codeT_canonical3.sh  gen_rsa_codeT_canonical4.sh  gen_rsa_codeT_canonical5.sh  gen_rsa_codeT_results.py  gen_rsa_codeT_results.sh  gen_rsa_codet_results.py  gen_rsa_testcases.py  gen_rsa_testcases.sh  rerank_by_consistency.py  verify_const_matrices.py  verify_const_matrices.sh
src/: codeT.py  data.py  mbr_exec.py  rsa.py  utils.py
vLLM/: codellama13b_vllm_humaneval.sh  (+11 more)
(+9 files in other folders)
