[project]
name = "testgen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.0.2",
    "modal>=0.64.232",
    "sentencepiece>=0.2.0",
    "tenacity>=9.0.0",
    "transformers>=4.46.0",
    "openai",
    "aiohttp>=3.10.10",
    "strictfire>=0.4.1",
    "streamlit>=1.40.2",
    "matplotlib>=3.9.3",
]
